fix: line height and spacing

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -30,6 +30,7 @@
     margin: 0;
     font-weight: bold;
     word-break: break-word;
+    margin-bottom: 4px;
   }
 
   &Description {
